# ggrd

./: .gitignore  CMakeLists.txt  README.md  flake.nix
frontend/: ggrd.html  msg.js  style.css  utils.js  video.js
include/: FaceRecognizer.h  FaceRecognizer.hpp  Types.h  VideoStreamer.h  VideoStreamer.hpp  WebSocketServer.h  WebSocketServer.hpp
preserver/: go.mod  go.sum  image.go  logger.go  main.go  models.go  route.go  ws_client.go
preserver/frontend/: config.js  face.js  fs.go  index.html  msg.js  records.css  records.html  records.js  style.css  utils.js  video.js
src/: FaceRecognizer.cpp  VideoStreamer.cpp  WebSocketServer.cpp  main.cpp
streamer/: CMakeLists.txt  config_example.json
streamer/include/: ConfigManager.hpp  FaceRecognizer.hpp  VideoStreamer.hpp  WebSocketServer.hpp
streamer/src/: ConfigManager.cpp  FaceRecognizer.cpp  VideoStreamer.cpp  WebSocketServer.cpp  main.cpp
